language-platforms/java-gradle/move2kube-output/temp/myproject/deploy/cicd/tekton-parameterized/kustomize/base/myproject-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: myproject
    name: myproject
spec:
    rules:
        - host: myproject-1234.com
          http:
            paths:
                - backend:
                    service:
                        name: el-myproject-git-repo
                        port:
                            name: port-8080
                  path: /el-myproject-git-repo
                  pathType: Prefix
status:
    loadBalancer: {}

...
